fixes added to all pages

--- a/trex.html
+++ b/trex.html
@@ -3,110 +3,110 @@
 
 <head>
 
-	<meta charset="utf-8">
-	<title>Центр террасной доски</title>
-	<meta name="description" content="Центр террасной доски">
-	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="css/app.min.css?v=1">
-	<script src="js/app.min.js" defer></script>
+    <meta charset="utf-8">
+    <title>Центр террасной доски</title>
+    <meta name="description" content="Центр террасной доски">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="css/app.min.css?v=1">
+    <script src="js/app.min.js" defer></script>
 
 </head>
 
 <body>
 
-	<header class="header">
-		<div class="header__top">
-			<div class="header__top--wrapper container">
-				<a href="/" class="header__logo">
-					<img src="img/logo.png" alt="Центр террасной доски">
-				</a>
-				<p class="header__worktime">
-					Пн. - Пт. с 10:00 до 19:00
-				</p>
-				<div class="header__contacts">
-					<p class="header__contacts--item">
-						<a href="tel:+79811406339" class="header__contacts--number">
-							+7 (981) 140-63-39
-						</a>
-						<span class="header__contacts--city">
-							Санкт-Петербург
-						</span>
-					</p>
-					<p class="header__contacts--item">
-						<a href="tel:+79811406350" class="header__contacts--number">
-							+7 (981) 140-63-50
-						</a>
-						<span class="header__contacts--city">
-							Санкт-Петербург
-						</span>
-					</p>
-					<p class="header__contacts--item">
-						<a href="tel:+79037837381" class="header__contacts--number">
-							+7 (903) 783-73-81
-						</a>
-						<span class="header__contacts--city">
-							Москва
-						</span>
-					</p>
-				</div>
-				<a class="header__button btn modal__edits">Заказать звонок</a>
-				<button class="hamburger" type="button">
-					<span class="hamburger__item"></span>
-				</button>
-			</div>
-		</div>
+    <header class="header">
+        <div class="header__top">
+            <div class="header__top--wrapper container">
+                <a href="/" class="header__logo">
+                    <img src="img/logo.png" alt="Центр террасной доски">
+                </a>
+                <p class="header__worktime">
+                    Пн. - Пт. с 10:00 до 19:00
+                </p>
+                <div class="header__contacts">
+                    <p class="header__contacts--item">
+                        <a href="tel:+79811406339" class="header__contacts--number">
+                            +7 (981) 140-63-39
+                        </a>
+                        <span class="header__contacts--city">
+                            Санкт-Петербург
+                        </span>
+                    </p>
+                    <p class="header__contacts--item">
+                        <a href="tel:+79811406350" class="header__contacts--number">
+                            +7 (981) 140-63-50
+                        </a>
+                        <span class="header__contacts--city">
+                            Санкт-Петербург
+                        </span>
+                    </p>
+                    <p class="header__contacts--item">
+                        <a href="tel:+79037837381" class="header__contacts--number">
+                            +7 (903) 783-73-81
+                        </a>
+                        <span class="header__contacts--city">
+                            Москва
+                        </span>
+                    </p>
+                </div>
+                <a class="header__button btn modal__edits">Заказать звонок</a>
+                <button class="hamburger" type="button">
+                    <span class="hamburger__item"></span>
+                </button>
+            </div>
+        </div>
 
-		<nav class="header__nav nav">
-			<div class="header__nav--wrapper container">
-				<ul class="nav__menu">
-					<li class="nav__submenu">
-						<a href="#" class="catalog">Каталог товаров</a>
-						<!-- <ul>
+        <nav class="header__nav nav">
+            <div class="header__nav--wrapper container">
+                <ul class="nav__menu">
+                    <li class="nav__submenu">
+                        <a href="#" class="catalog">Каталог товаров</a>
+                        <!-- <ul>
 							<li><a href="#">Link</a></li>
 							<li><a href="#">Link</a></li>
 							<li><a href="#">Link</a></li>
 						</ul> -->
-					</li>
-					<li><a href="#">Готовые решения</a></li>
-					<li><a href="#">Выполненые работы</a></li>
-					<li><a href="#">Скидки и акции</a></li>
-					<li><a href="#">О компании</a></li>
-					<li><a href="#">Контакты</a></li>
-				</ul>
-				<div class="header__nav--info">
-					<p class="header__info--worktime">
-						Пн. - Пт. с 10:00 до 19:00
-					</p>
-					<div class="header__info--contacts">
-						<div class="header__info--item">
-							<a href="tel:+79811406339" class="header__info--number">
-								+7 (981) 140-63-39
-							</a>
-							<p class="header__info--city">
-								Санкт-Петербург
-							</p>
-						</div>
-						<div class="header__info--item">
-							<a href="tel:+79811406350" class="header__info--number">
-								+7 (981) 140-63-50
-							</a>
-							<p class="header__info--city">
-								Санкт-Петербург
-							</p>
-						</div>
-						<div class="header__info--item">
-							<a href="tel:+79037837381" class="header__info--number">
-								+7 (903) 783-73-81
-							</a>
-							<p class="header__info--city">
-								Москва
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</nav>
-	</header>
+                    </li>
+                    <li><a href="#">Готовые решения</a></li>
+                    <li><a href="#">Выполненые работы</a></li>
+                    <li><a href="#">Скидки и акции</a></li>
+                    <li><a href="#">О компании</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+                <div class="header__nav--info">
+                    <p class="header__info--worktime">
+                        Пн. - Пт. с 10:00 до 19:00
+                    </p>
+                    <div class="header__info--contacts">
+                        <div class="header__info--item">
+                            <a href="tel:+79811406339" class="header__info--number">
+                                +7 (981) 140-63-39
+                            </a>
+                            <p class="header__info--city">
+                                Санкт-Петербург
+                            </p>
+                        </div>
+                        <div class="header__info--item">
+                            <a href="tel:+79811406350" class="header__info--number">
+                                +7 (981) 140-63-50
+                            </a>
+                            <p class="header__info--city">
+                                Санкт-Петербург
+                            </p>
+                        </div>
+                        <div class="header__info--item">
+                            <a href="tel:+79037837381" class="header__info--number">
+                                +7 (903) 783-73-81
+                            </a>
+                            <p class="header__info--city">
+                                Москва
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
 
     <main class="trex main">
         <div class="trex__wrapper container">
@@ -174,7 +174,7 @@
                         <a href="/"><img src="img/logo-trex.png" alt=""></a>
                     </div>
                 </div>
-                
+
                 <div class="items__list">
                     <article class="items__item">
                         <div class="items__image">
@@ -192,7 +192,7 @@
                                 <p class="items__price--value">
                                     1 950 руб./м<sup>2</sup>
                                 </p>
-                                <a href="/" class="items__price--button btn">Подробнее</a>
+                                <a href="#" class="items__price--button btn">Подробнее</a>
                             </div>
                         </div>
                     </article>
@@ -212,7 +212,7 @@
                                 <p class="items__price--value">
                                     1 950 руб./м<sup>2</sup>
                                 </p>
-                                <a href="/" class="other__price--button btn">Подробнее</a>
+                                <a href="#" class="other__price--button btn">Подробнее</a>
                             </div>
                         </div>
                     </article>
@@ -232,7 +232,7 @@
                                 <p class="items__price--value">
                                     1 950 руб./м<sup>2</sup>
                                 </p>
-                                <a href="/" class="items__price--button btn">Подробнее</a>
+                                <a href="#" class="items__price--button btn">Подробнее</a>
                             </div>
                         </div>
                     </article>
@@ -240,27 +240,31 @@
             </section>
 
             <section class="description">
-                    <p class="description__text">
-                        Trex Transcend сохраняет свой яркий цвет и роскошную текстуру под палящим солнцем. Не боится пролитого вина, каблуков.
-                        Наверное, самая устойчивая террасная доска к неблагоприятным природным условиям. Минимум хлопот - Не требует шлифовки,
-                        окрашивания или другой дополнительной обработки. Уход прост - обычная влажная уборка. Этого будет достаточно, чтобы убрать
-                        пятна и масляные, и кислотные. Ту же краску, можно снять растворителями. Террасная доска от этого не пострадает, это проверено
-                        нами на опыте. Устойчива к выцветанию, пятнам, царапинам и плесени.
-                    </p>
-                    <div class="description__quality">
-                        <div class="description__item">
-                            <img src="img/quality-color.png" alt="">
-                            <p>Премиум коллекции<br>цветов</p>
-                        </div>
-                        <div class="description__item">
-                            <img src="img/quality-25.png" alt="">
-                            <p>Гарантия от<br>производителя</p>
-                        </div>
+                <p class="description__text">
+                    Trex Transcend сохраняет свой яркий цвет и роскошную текстуру под палящим солнцем. Не боится
+                    пролитого вина, каблуков.
+                    Наверное, самая устойчивая террасная доска к неблагоприятным природным условиям. Минимум хлопот - Не
+                    требует шлифовки,
+                    окрашивания или другой дополнительной обработки. Уход прост - обычная влажная уборка. Этого будет
+                    достаточно, чтобы убрать
+                    пятна и масляные, и кислотные. Ту же краску, можно снять растворителями. Террасная доска от этого не
+                    пострадает, это проверено
+                    нами на опыте. Устойчива к выцветанию, пятнам, царапинам и плесени.
+                </p>
+                <div class="description__quality">
+                    <div class="description__item">
+                        <img src="img/quality-color.png" alt="">
+                        <p>Премиум коллекции<br>цветов</p>
                     </div>
+                    <div class="description__item">
+                        <img src="img/quality-25.png" alt="">
+                        <p>Гарантия от<br>производителя</p>
+                    </div>
+                </div>
             </section>
         </div>
     </main>
-    
+
     <footer class="footer">
         <div class="footer__wrapper container">
             <a href="/" class="footer__policy">Политика конфиденциальности</a>
