--- a/trex.html
+++ b/trex.html
@@ -111,55 +111,30 @@
     <main class="trex main">
         <div class="trex__wrapper container">
             <section class="trex__list">
-                <div class="leftbar">
-                    <div class="leftbar__header">
-                        <p>Террасная доска</p>
-                    </div>
-                    <div class="leftbar__content">
-                        <ul>
-                            <li><a href="#">Trex</a></li>
-                            <li><a href="#">Древопласт</a></li>
-                            <li><a href="#">Woodvex</a></li>
-                            <li><a href="#">Термодревесина</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="leftbar">
-                    <div class="leftbar__header">
-                        <p>Ограждения</p>
-                    </div>
-                    <div class="leftbar__content">
-                        <ul>
-                            <li><a href="#">Trex</a></li>
-                            <li><a href="#">Woodvex</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="leftbar">
-                    <div class="leftbar__header">
-                        <p>Безшовные покрытия</p>
-                    </div>
-                    <div class="leftbar__content">
-                        <ul>
-                            <li><a href="#">Покрытия из резиновой крошки</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="leftbar-link">
-                    <div class="leftbar-link__header">
-                        <a href="#">Фигуры из каучука</a>
-                    </div>
-                </div>
-                <div class="leftbar-link">
-                    <div class="leftbar-link__header">
-                        <a href="#">Скидки и акции</a>
-                    </div>
-                </div>
-                <div class="leftbar-link">
-                    <div class="leftbar-link__header">
-                        <a href="#">Монтаж</a>
-                    </div>
-                </div>
+                <div class="sidebar">
+					<div class="sidebar__list">
+						<a href="#" class="sidebar__title">Террасная доска</a>
+						<ul>
+							<li><a href="#" class="sidebar__link"><span>-</span>Trex</a></li>
+							<li><a href="#" class="sidebar__link"><span>-</span>Деревопласт</a></li>
+							<li><a href="#" class="sidebar__link"><span>-</span>Woodvex</a></li>
+							<li><a href="#" class="sidebar__link"><span>-</span>Террапол</a></li>
+							<li><a href="#" class="sidebar__link"><span>-</span>Термодревесина</a></li>
+						</ul>
+						<a href="#" class="sidebar__title">Ограждения</a>
+						<ul>
+							<li><a href="#" class="sidebar__link"><span>-</span> Trex</a></li>
+							<li><a href="#" class="sidebar__link"><span>-</span> Woodvex</a></li>
+						</ul>
+						<a href="#" class="sidebar__title">Безшовные покрытия</a>
+						<ul>
+							<li><a href="#" class="sidebar__link"><span>-</span> Покрытия из резиновой крошки</a></li>
+						</ul>
+						<a href="#" class="sidebar__title">Фигуры из каучука</a>
+						<a href="#" class="sidebar__title">Скидки и акции</a>
+						<a href="#" class="sidebar__title">Монтаж</a>
+					</div>
+				</div>
             </section>
 
             <section class="items">
