--- a/performered.html
+++ b/performered.html
@@ -111,7 +111,31 @@
 	<section class="performered">
 		<div class="performered__wrap container">
 			<div class="performered_list">
-				<div class="leftbar">
+				<div class="sidebar">
+					<div class="sidebar__list">
+						<a href="#" class="sidebar__title">Террасная доска</a>
+						<ul>
+							<li><a href="#" class="sidebar__link"><span>-</span>Trex</a></li>
+							<li><a href="#" class="sidebar__link"><span>-</span>Деревопласт</a></li>
+							<li><a href="#" class="sidebar__link"><span>-</span>Woodvex</a></li>
+							<li><a href="#" class="sidebar__link"><span>-</span>Террапол</a></li>
+							<li><a href="#" class="sidebar__link"><span>-</span>Термодревесина</a></li>
+						</ul>
+						<a href="#" class="sidebar__title">Ограждения</a>
+						<ul>
+							<li><a href="#" class="sidebar__link"><span>-</span> Trex</a></li>
+							<li><a href="#" class="sidebar__link"><span>-</span> Woodvex</a></li>
+						</ul>
+						<a href="#" class="sidebar__title">Безшовные покрытия</a>
+						<ul>
+							<li><a href="#" class="sidebar__link"><span>-</span> Покрытия из резиновой крошки</a></li>
+						</ul>
+						<a href="#" class="sidebar__title">Фигуры из каучука</a>
+						<a href="#" class="sidebar__title">Скидки и акции</a>
+						<a href="#" class="sidebar__title">Монтаж</a>
+					</div>
+				</div>
+				<!-- <div class="leftbar">
                     <div class="leftbar__header">
                         <p>Террасная доска</p>
                     </div>
@@ -159,7 +183,7 @@
                     <div class="leftbar-link__header">
                         <a href="#">Монтаж</a>
                     </div>
-                </div>
+                </div> -->
 			</div>
 			<div class="performered-tabs">
 				<h2 class="h2">Выполненные работы</h2>
