--- a/index.html
+++ b/index.html
@@ -266,18 +266,30 @@
 						</div>
 						<div class="swiper-pagination"></div>
 						<div class="swiper-arrows">
-							<div class="swiper-button-prev">
-								<a href="/">
-									<img src="img/prev-arrow.png" alt="" class="slider-arrow">
-								</a>
-							</div>
-							<div class="swiper-button-next">
-								<a href="/">
-									<img src="img/next-arrow.png" alt="" class="slider-arrow">
-								</a>
-							</div>
+							<button class="swiper-button-prev">
+								<svg xmlns="http://www.w3.org/2000/svg" width="116.5" 
+								height="17" viewBox="0 0 116.5 17">  <defs>
+								<style>.cls-2{fill:none;stroke-width:2px}.cls-2, 
+								.cls-3{stroke:#b17a58;fill-rule:evenodd}.cls-3{fill:#b17a58;stroke-width:1px}
+								</style>  </defs>  <g id="лево" class="cls-1">    <path id="Фигура_2" 
+								data-name="Фигура 2" class="cls-2" d="M1454.5,1723.5h-102" 
+								transform="translate(-1339 -1714)"/>    <path id="Фигура_3" data-name="Фигура 3" 
+									class="cls-3" d="M1357.5,1730.5v-16l-18,8Z" transform="translate(-1339 -1714)"/>  
+								</g></svg>
+							</button>
+							<button class="swiper-button-next">
+								<svg xmlns="http://www.w3.org/2000/svg" width="116.5" 
+								height="17" viewBox="0 0 116.5 17">  <defs>
+								<style>.cls-2{fill:none;stroke-width:2px}.cls-2, 
+								.cls-3{stroke:#b17a58;fill-rule:evenodd}.cls-3{fill:#b17a58;stroke-width:1px}
+								</style>  </defs>  <g id="лево" class="cls-1">    <path id="Фигура_2" 
+								data-name="Фигура 2" class="cls-2" d="M1454.5,1723.5h-102" 
+								transform="translate(-1339 -1714)"/>    <path id="Фигура_3" data-name="Фигура 3" 
+									class="cls-3" d="M1357.5,1730.5v-16l-18,8Z" transform="translate(-1339 -1714)"/>  
+								</g></svg>
+							</button>
 						</div>
-					  </div>
+					</div>
 				</div>
 			</div>
 		</section>
