--- a/contact.html
+++ b/contact.html
@@ -221,17 +221,15 @@
 
 			</div>
 
-			<div class="map">
-				<div class="container">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d707.4293360591425!2d30.42179789744746!3d59.900405077211026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962e327e510813%3A0xe080704df91ad27a!2z0JHQvtC70YzRiNC-0Lkg0KHQvNC-0LvQtdC90YHQutC40Lkg0L_RgC4sIDIsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MjAyOQ!5e0!3m2!1sru!2sua!4v1620898384626!5m2!1sru!2sua" width="1000" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-				</div>
+			<div class="map container">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d707.4293360591425!2d30.42179789744746!3d59.900405077211026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962e327e510813%3A0xe080704df91ad27a!2z0JHQvtC70YzRiNC-0Lkg0KHQvNC-0LvQtdC90YHQutC40Lkg0L_RgC4sIDIsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MjAyOQ!5e0!3m2!1sru!2sua!4v1620898384626!5m2!1sru!2sua" width="1000" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 			</div>
 
 		</div>
 	</div>
 	</section>
 
-		<section class="contacts">
+		<section class="contacts--contact">
 			<div class="contacts__wrapper container">
 
 				<h2 class="contacts__title h2">
