--- a/action.html
+++ b/action.html
@@ -209,7 +209,7 @@
 		</section>
 
 
-		<section class="contacts">
+		<section class="contacts--action">
 			<div class="contacts__wrapper container">
 
 				<h2 class="contacts__title h2">
