--- a/project.html
+++ b/project.html
@@ -15,98 +15,150 @@
 <body>
 
     <header class="header">
-        <div class="header__top">
-            <div class="header__top--wrapper container">
-                <a href="/" class="header__logo">
-                    <img src="img/logo.png" alt="Центр террасной доски">
-                </a>
-                <p class="header__worktime">
-                    Пн. - Пт. с 10:00 до 19:00
-                </p>
-                <div class="header__contacts">
-                    <p class="header__contacts--item">
-                        <a href="tel:+79811406339" class="header__contacts--number">
-                            +7 (981) 140-63-39
-                        </a>
-                        <span class="header__contacts--city">
-                            Санкт-Петербург
-                        </span>
-                    </p>
-                    <p class="header__contacts--item">
-                        <a href="tel:+79811406350" class="header__contacts--number">
-                            +7 (981) 140-63-50
-                        </a>
-                        <span class="header__contacts--city">
-                            Санкт-Петербург
-                        </span>
-                    </p>
-                    <p class="header__contacts--item">
-                        <a href="tel:+79037837381" class="header__contacts--number">
-                            +7 (903) 783-73-81
-                        </a>
-                        <span class="header__contacts--city">
-                            Москва
-                        </span>
-                    </p>
-                </div>
-                <a class="header__button btn modal__edits">Заказать звонок</a>
-                <button class="hamburger" type="button">
-                    <span class="hamburger__item"></span>
-                </button>
-            </div>
-        </div>
+		<div class="header__top">
+			<div class="header__top--wrapper container">
+				<a href="/" class="header__logo">
+					<img src="img/logo.png" alt="Центр террасной доски">
+				</a>
+				<p class="header__worktime">
+					Пн. - Пт. с 10:00 до 19:00
+				</p>
+				<div class="header__contacts">
+					<p class="header__contacts--item">
+						<a href="tel:+79811406339" class="header__contacts--number">
+							+7 (981) 140-63-39
+						</a>
+						<span class="header__contacts--city">
+							Санкт-Петербург
+						</span>
+					</p>
+					<p class="header__contacts--item">
+						<a href="tel:+79811406350" class="header__contacts--number">
+							+7 (981) 140-63-50
+						</a>
+						<span class="header__contacts--city">
+							Санкт-Петербург
+						</span>
+					</p>
+					<p class="header__contacts--item">
+						<a href="tel:+79037837381" class="header__contacts--number">
+							+7 (903) 783-73-81
+						</a>
+						<span class="header__contacts--city">
+							Москва
+						</span>
+					</p>
+				</div>
+				<a class="header__button btn modal__edits">Заказать звонок</a>
+				<button class="hamburger" type="button">
+					<span class="hamburger__item"></span>
+				</button>
+			</div>
+		</div>
 
-        <nav class="header__nav nav">
-            <div class="header__nav--wrapper container">
-                <ul class="nav__menu">
-                    <li class="nav__submenu">
-                        <a href="#" class="catalog">Каталог товаров</a>
-                        <!-- <ul>
-							<li><a href="#">Link</a></li>
-							<li><a href="#">Link</a></li>
-							<li><a href="#">Link</a></li>
-						</ul> -->
-                    </li>
-                    <li><a href="#">Готовые решения</a></li>
-                    <li><a href="#">Выполненые работы</a></li>
-                    <li><a href="#">Скидки и акции</a></li>
-                    <li><a href="#">О компании</a></li>
-                    <li><a href="#">Контакты</a></li>
-                </ul>
-                <div class="header__nav--info">
-                    <p class="header__info--worktime">
-                        Пн. - Пт. с 10:00 до 19:00
-                    </p>
-                    <div class="header__info--contacts">
-                        <div class="header__info--item">
-                            <a href="tel:+79811406339" class="header__info--number">
-                                +7 (981) 140-63-39
-                            </a>
-                            <p class="header__info--city">
-                                Санкт-Петербург
-                            </p>
-                        </div>
-                        <div class="header__info--item">
-                            <a href="tel:+79811406350" class="header__info--number">
-                                +7 (981) 140-63-50
-                            </a>
-                            <p class="header__info--city">
-                                Санкт-Петербург
-                            </p>
-                        </div>
-                        <div class="header__info--item">
-                            <a href="tel:+79037837381" class="header__info--number">
-                                +7 (903) 783-73-81
-                            </a>
-                            <p class="header__info--city">
-                                Москва
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </header>
+		<nav class="header__nav nav">
+			<div class="header__nav--wrapper container">
+				<ul class="nav__menu">
+					<li class="nav__submenu">
+						<a href="#" class="catalog">Каталог товаров</a>
+						<ul>
+							<li>
+								<svg xmlns="http://www.w3.org/2000/svg"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									width="4px" height="4px"><path fill-rule="evenodd"  
+									fill="rgb(161, 161, 161)"
+									d="M2.000,-0.000 C3.105,-0.000 4.000,0.895 4.000,2.000 C4.000,3.104 
+									3.105,4.000 2.000,4.000 C0.895,4.000 -0.000,3.104 -0.000,2.000 C-0.000,0.895 
+									0.895,-0.000 2.000,-0.000 Z"/>
+								</svg>
+								<a href="#" class="nav__submenu_link">Террасная доска из ДПК</a>
+							</li>
+							<li>
+								<svg xmlns="http://www.w3.org/2000/svg"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									width="4px" height="4px"><path fill-rule="evenodd"  
+									fill="rgb(161, 161, 161)"
+									d="M2.000,-0.000 C3.105,-0.000 4.000,0.895 4.000,2.000 C4.000,3.104 
+									3.105,4.000 2.000,4.000 C0.895,4.000 -0.000,3.104 -0.000,2.000 C-0.000,0.895 
+									0.895,-0.000 2.000,-0.000 Z"/>
+								</svg>
+								<a href="#" class="nav__submenu_link">Монтажные работы</a>
+							</li>
+							<li>
+								<svg xmlns="http://www.w3.org/2000/svg"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									width="4px" height="4px"><path fill-rule="evenodd"  
+									fill="rgb(161, 161, 161)"
+									d="M2.000,-0.000 C3.105,-0.000 4.000,0.895 4.000,2.000 C4.000,3.104 
+									3.105,4.000 2.000,4.000 C0.895,4.000 -0.000,3.104 -0.000,2.000 C-0.000,0.895 
+									0.895,-0.000 2.000,-0.000 Z"/>
+								</svg>
+								<a href="#" class="nav__submenu_link">Ограждения</a>
+							</li>
+							<li>
+								<svg xmlns="http://www.w3.org/2000/svg"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									width="4px" height="4px"><path fill-rule="evenodd"  
+									fill="rgb(161, 161, 161)"
+									d="M2.000,-0.000 C3.105,-0.000 4.000,0.895 4.000,2.000 C4.000,3.104 
+									3.105,4.000 2.000,4.000 C0.895,4.000 -0.000,3.104 -0.000,2.000 C-0.000,0.895 
+									0.895,-0.000 2.000,-0.000 Z"/>
+								</svg>
+								<a href="#" class="nav__submenu_link">Безшовные покрытия</a>
+							</li>
+							<li>
+								<svg xmlns="http://www.w3.org/2000/svg"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									width="4px" height="4px"><path fill-rule="evenodd"  
+									fill="rgb(161, 161, 161)"
+									d="M2.000,-0.000 C3.105,-0.000 4.000,0.895 4.000,2.000 C4.000,3.104 
+									3.105,4.000 2.000,4.000 C0.895,4.000 -0.000,3.104 -0.000,2.000 C-0.000,0.895 
+									0.895,-0.000 2.000,-0.000 Z"/>
+								</svg>
+								<a href="#" class="nav__submenu_link">Фигуры из каучука</a>
+							</li>
+						</ul>
+					</li>
+					<li><a href="#">Готовые решения</a></li>
+					<li><a href="#">Выполненые работы</a></li>
+					<li><a href="#">Скидки и акции</a></li>
+					<li><a href="#">О компании</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+				<div class="header__nav--info">
+					<p class="header__info--worktime">
+						Пн. - Пт. с 10:00 до 19:00
+					</p>
+					<div class="header__info--contacts">
+						<div class="header__info--item">
+							<a href="tel:+79811406339" class="header__info--number">
+								+7 (981) 140-63-39
+							</a>
+							<p class="header__info--city">
+								Санкт-Петербург
+							</p>
+						</div>
+						<div class="header__info--item">
+							<a href="tel:+79811406350" class="header__info--number">
+								+7 (981) 140-63-50
+							</a>
+							<p class="header__info--city">
+								Санкт-Петербург
+							</p>
+						</div>
+						<div class="header__info--item">
+							<a href="tel:+79037837381" class="header__info--number">
+								+7 (903) 783-73-81
+							</a>
+							<p class="header__info--city">
+								Москва
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</nav>
+	</header>
  
     <main class="project main">
         
@@ -176,22 +228,34 @@
                 <div class="swiper-container container">
 					<div class="swiper-wrapper ">
 							<div class="swiper-slide">
-								<img class="project__slider--image" src="img/slider-item-1.png" alt="">
+                                <div class="slider__img-wrapper">
+                                    <img class="project__slider--image" src="img/slider-item-1.png" alt="">
+                                </div>
 							</div>
 							<div class="swiper-slide">
-								<img class="project__slider--image" src="img/slider-item-2.png" alt="">
+                                <div class="slider__img-wrapper">
+                                    <img class="project__slider--image" src="img/slider-item-2.png" alt="">
+                                </div>
 							</div>
 							<div class="swiper-slide">
-								<img class="project__slider--image" src="img/slider-item-3.png" alt="">
+                                <div class="slider__img-wrapper">
+                                    <img class="project__slider--image" src="img/slider-item-3.png" alt="">
+                                </div>
 							</div>
 							<div class="swiper-slide">
-								<img class="project__slider--image" src="img/slider-item-2.png" alt="">
+                                <div class="slider__img-wrapper">
+                                    <img class="project__slider--image" src="img/slider-item-2.png" alt="">
+                                </div>
 							</div>
 							<div class="swiper-slide">
-								<img class="project__slider--image" src="img/slider-item-2.png" alt="">
+                                <div class="slider__img-wrapper">
+                                    <img class="project__slider--image" src="img/slider-item-2.png" alt="">
+                                </div>
 							</div>
 							<div class="swiper-slide">
-								<img class="project__slider--image" src="img/slider-item-2.png" alt="">
+                                <div class="slider__img-wrapper">
+                                    <img class="project__slider--image" src="img/slider-item-2.png" alt="">
+                                </div>
 							</div>
 					</div>
 					<div class="swiper-pagination"></div>
@@ -230,27 +294,39 @@
                 <div class="swiper-container container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img class="portfolio__slider--image" src="img/slider-item-1.png" alt="">
+                            <div class="slider__img-wrapper">
+                                <img class="portfolio__slider--image" src="img/slider-item-1.png" alt="">
+                            </div>
                             <a href="/">Терассы у дома в лесу</a>
                         </div>
                         <div class="swiper-slide">
-                            <img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+                            <div class="slider__img-wrapper">
+                                <img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+                            </div>
                             <a href="/">Дизайнерский мост<br>через через речку</a>
                         </div>
                         <div class="swiper-slide">
-                            <img class="portfolio__slider--image" src="img/slider-item-3.png" alt="">
+                            <div class="slider__img-wrapper">
+                                <img class="portfolio__slider--image" src="img/slider-item-3.png" alt="">
+                            </div>
                             <a href="/">Терассы с дизайнерским<br>решением</a>
                         </div>
                         <div class="swiper-slide">
-                            <img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+                            <div class="slider__img-wrapper">
+                                <img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+                            </div>
                             <a href="/">Терраса вокруг загородного дома с системой ограждений</a>
                         </div>
                         <div class="swiper-slide">
-                            <img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+                            <div class="slider__img-wrapper">
+                                <img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+                            </div>
                             <a href="/">Терраса вокруг загородного дома с системой ограждений</a>
                         </div>
                         <div class="swiper-slide">
-                            <img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+                            <div class="slider__img-wrapper">
+                                <img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+                            </div>
                             <a href="/">Терраса вокруг загородного дома с системой ограждений</a>
                         </div>
                     </div>
