--- a/cart.html
+++ b/cart.html
@@ -61,11 +61,63 @@
 				<ul class="nav__menu">
 					<li class="nav__submenu">
 						<a href="#" class="catalog">Каталог товаров</a>
-						<!-- <ul>
-							<li><a href="#">Link</a></li>
-							<li><a href="#">Link</a></li>
-							<li><a href="#">Link</a></li>
-						</ul> -->
+						<ul>
+							<li>
+								<svg xmlns="http://www.w3.org/2000/svg"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									width="4px" height="4px"><path fill-rule="evenodd"  
+									fill="rgb(161, 161, 161)"
+									d="M2.000,-0.000 C3.105,-0.000 4.000,0.895 4.000,2.000 C4.000,3.104 
+									3.105,4.000 2.000,4.000 C0.895,4.000 -0.000,3.104 -0.000,2.000 C-0.000,0.895 
+									0.895,-0.000 2.000,-0.000 Z"/>
+								</svg>
+								<a href="#" class="nav__submenu_link">Террасная доска из ДПК</a>
+							</li>
+							<li>
+								<svg xmlns="http://www.w3.org/2000/svg"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									width="4px" height="4px"><path fill-rule="evenodd"  
+									fill="rgb(161, 161, 161)"
+									d="M2.000,-0.000 C3.105,-0.000 4.000,0.895 4.000,2.000 C4.000,3.104 
+									3.105,4.000 2.000,4.000 C0.895,4.000 -0.000,3.104 -0.000,2.000 C-0.000,0.895 
+									0.895,-0.000 2.000,-0.000 Z"/>
+								</svg>
+								<a href="#" class="nav__submenu_link">Монтажные работы</a>
+							</li>
+							<li>
+								<svg xmlns="http://www.w3.org/2000/svg"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									width="4px" height="4px"><path fill-rule="evenodd"  
+									fill="rgb(161, 161, 161)"
+									d="M2.000,-0.000 C3.105,-0.000 4.000,0.895 4.000,2.000 C4.000,3.104 
+									3.105,4.000 2.000,4.000 C0.895,4.000 -0.000,3.104 -0.000,2.000 C-0.000,0.895 
+									0.895,-0.000 2.000,-0.000 Z"/>
+								</svg>
+								<a href="#" class="nav__submenu_link">Ограждения</a>
+							</li>
+							<li>
+								<svg xmlns="http://www.w3.org/2000/svg"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									width="4px" height="4px"><path fill-rule="evenodd"  
+									fill="rgb(161, 161, 161)"
+									d="M2.000,-0.000 C3.105,-0.000 4.000,0.895 4.000,2.000 C4.000,3.104 
+									3.105,4.000 2.000,4.000 C0.895,4.000 -0.000,3.104 -0.000,2.000 C-0.000,0.895 
+									0.895,-0.000 2.000,-0.000 Z"/>
+								</svg>
+								<a href="#" class="nav__submenu_link">Безшовные покрытия</a>
+							</li>
+							<li>
+								<svg xmlns="http://www.w3.org/2000/svg"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									width="4px" height="4px"><path fill-rule="evenodd"  
+									fill="rgb(161, 161, 161)"
+									d="M2.000,-0.000 C3.105,-0.000 4.000,0.895 4.000,2.000 C4.000,3.104 
+									3.105,4.000 2.000,4.000 C0.895,4.000 -0.000,3.104 -0.000,2.000 C-0.000,0.895 
+									0.895,-0.000 2.000,-0.000 Z"/>
+								</svg>
+								<a href="#" class="nav__submenu_link">Фигуры из каучука</a>
+							</li>
+						</ul>
 					</li>
 					<li><a href="#">Готовые решения</a></li>
 					<li><a href="#">Выполненые работы</a></li>
