--- a/index.html
+++ b/index.html
@@ -61,11 +61,63 @@
 				<ul class="nav__menu">
 					<li class="nav__submenu">
 						<a href="#" class="catalog">Каталог товаров</a>
-						<!-- <ul>
-							<li><a href="#">Link</a></li>
-							<li><a href="#">Link</a></li>
-							<li><a href="#">Link</a></li>
-						</ul> -->
+						<ul>
+							<li>
+								<svg xmlns="http://www.w3.org/2000/svg"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									width="4px" height="4px"><path fill-rule="evenodd"  
+									fill="rgb(161, 161, 161)"
+									d="M2.000,-0.000 C3.105,-0.000 4.000,0.895 4.000,2.000 C4.000,3.104 
+									3.105,4.000 2.000,4.000 C0.895,4.000 -0.000,3.104 -0.000,2.000 C-0.000,0.895 
+									0.895,-0.000 2.000,-0.000 Z"/>
+								</svg>
+								<a href="#" class="nav__submenu_link">Террасная доска из ДПК</a>
+							</li>
+							<li>
+								<svg xmlns="http://www.w3.org/2000/svg"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									width="4px" height="4px"><path fill-rule="evenodd"  
+									fill="rgb(161, 161, 161)"
+									d="M2.000,-0.000 C3.105,-0.000 4.000,0.895 4.000,2.000 C4.000,3.104 
+									3.105,4.000 2.000,4.000 C0.895,4.000 -0.000,3.104 -0.000,2.000 C-0.000,0.895 
+									0.895,-0.000 2.000,-0.000 Z"/>
+								</svg>
+								<a href="#" class="nav__submenu_link">Монтажные работы</a>
+							</li>
+							<li>
+								<svg xmlns="http://www.w3.org/2000/svg"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									width="4px" height="4px"><path fill-rule="evenodd"  
+									fill="rgb(161, 161, 161)"
+									d="M2.000,-0.000 C3.105,-0.000 4.000,0.895 4.000,2.000 C4.000,3.104 
+									3.105,4.000 2.000,4.000 C0.895,4.000 -0.000,3.104 -0.000,2.000 C-0.000,0.895 
+									0.895,-0.000 2.000,-0.000 Z"/>
+								</svg>
+								<a href="#" class="nav__submenu_link">Ограждения</a>
+							</li>
+							<li>
+								<svg xmlns="http://www.w3.org/2000/svg"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									width="4px" height="4px"><path fill-rule="evenodd"  
+									fill="rgb(161, 161, 161)"
+									d="M2.000,-0.000 C3.105,-0.000 4.000,0.895 4.000,2.000 C4.000,3.104 
+									3.105,4.000 2.000,4.000 C0.895,4.000 -0.000,3.104 -0.000,2.000 C-0.000,0.895 
+									0.895,-0.000 2.000,-0.000 Z"/>
+								</svg>
+								<a href="#" class="nav__submenu_link">Безшовные покрытия</a>
+							</li>
+							<li>
+								<svg xmlns="http://www.w3.org/2000/svg"
+									xmlns:xlink="http://www.w3.org/1999/xlink"
+									width="4px" height="4px"><path fill-rule="evenodd"  
+									fill="rgb(161, 161, 161)"
+									d="M2.000,-0.000 C3.105,-0.000 4.000,0.895 4.000,2.000 C4.000,3.104 
+									3.105,4.000 2.000,4.000 C0.895,4.000 -0.000,3.104 -0.000,2.000 C-0.000,0.895 
+									0.895,-0.000 2.000,-0.000 Z"/>
+								</svg>
+								<a href="#" class="nav__submenu_link">Фигуры из каучука</a>
+							</li>
+						</ul>
 					</li>
 					<li><a href="#">Готовые решения</a></li>
 					<li><a href="#">Выполненые работы</a></li>
@@ -240,27 +292,39 @@
 					<div class="swiper-container">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img class="portfolio__slider--image" src="img/slider-item-1.png" alt="">
+								<div class="slider__img-wrapper">
+									<img class="portfolio__slider--image" src="img/slider-item-1.png" alt="">
+								</div>
 								<a href="/">Терассы у дома в лесу</a>
 							</div>
 							<div class="swiper-slide">
-								<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+								<div class="slider__img-wrapper">
+									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+								</div>
 								<a href="/">Дизайнерский мост<br>через через речку</a>
 							</div>
 							<div class="swiper-slide">
-								<img class="portfolio__slider--image" src="img/slider-item-3.png" alt="">
+								<div class="slider__img-wrapper">
+									<img class="portfolio__slider--image" src="img/slider-item-3.png" alt="">
+								</div>
 								<a href="/">Терассы с дизайнерским<br>решением</a>
 							</div>
 							<div class="swiper-slide">
-								<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+								<div class="slider__img-wrapper">
+									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+								</div>
 								<a href="/">Терраса вокруг загородного дома с системой ограждений</a>
 							</div>
 							<div class="swiper-slide">
-								<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+								<div class="slider__img-wrapper">
+									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+								</div>
 								<a href="/">Терраса вокруг загородного дома с системой ограждений</a>
 							</div>
 							<div class="swiper-slide">
-								<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+								<div class="slider__img-wrapper">
+									<img class="portfolio__slider--image" src="img/slider-item-2.png" alt="">
+								</div>
 								<a href="/">Терраса вокруг загородного дома с системой ограждений</a>
 							</div>
 						</div>
